# studia

./: .gitignore
proi/meetings/: CMakeLists.txt  datetime.cpp  datetime.h  exceptions.h  main.cpp  makefile  meeting.cpp  meeting.h  person.cpp  person.h  readme.md  testGoogle.cpp
proi/z1-mateusz-wawrzyniak/: fract.cpp  fract.h  fract_test.cpp  makefile
proi/z3-mateusz-wawrzyniak/: .gitignore  CMakeLists.txt  README.md  counter.cpp  counter.h  entry.cpp  entry.h  main.cpp  testGoogle.cpp  words.txt
riscv/: 1a.asm  1b.asm  2a.asm  2c.asm  3a.asm  4a.asm  5f.asm
riscv/proj_risc_v/: test.asm  test.cpp
x86/32bit/: func.asm  main.c
x86/64bit/: func.asm  main.c  makefile
